2007-12-05  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/src/graphobject.c
	(igraphmodule_Graph_adjacent) : added
	
	* interfaces/python/package/__init__.py :
	(Graph.get_adjlist, Graph.get_adjedgelist) : added
	
	* interfaces/python/package/test/basic.py : added tests

2007-12-04  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/src/graphobject.c
	(igraphmodule_Graph_{count,get}_[sub]isomorphisms) : added
	
	* interfaces/python/src/graphobject.c
	(igraphmodule_Graph_subisomorphic) : added
	
	* interfaces/python/package/test/isomorphism.py : added tests

2007-12-04  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_ml_cit.c (igraph_revolver_ml_DE)
	(igraph_revolver_ml_DE_alpha_a, igraph_revolver_ml_ADE_
	(igraph_revolver_ml_ADE_alpha_a_beta, igraph_revolver_ml_ADE_dpareto)
	(igraph_revolver_ml_ADE_dpareto_eval) : added

2007-12-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/igraph.h (igraph_scalar_function_t, igraph_vector_function_t) :
	use separate arguments for variables and parameters

	* src/revolver_ml_cit.c (igraph_revolver_ml_d, igraph_revolver_ml_de)
	(igraph_revolver_ml_ade, igraph_revolveR_ml_ad) : filter argument added

2007-11-29  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_ml_cit.c (igraph_revolver_ml_l) : added

2007-11-28  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_ml_cit.c (igraph_revolver_probs_de)
	(igraph_revolver_probs_ade) : added

2007-11-27  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_ml_cot.c (igraph_revolver_ml_de, igraph_revolver_ml_ade) :
	added

	* src/games.c (igraph_callaway_traits_game, igraph_establisment_game)
	(igraph_cited_type_game) : bugs fixed

2007-11-26  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_ml_cit.c (igraph_revolver_probs_d)
	(igraph_revolver_probs_ad) : added

	* src/revolver_ml_cit.c (igraph_revolver_ml_AD_dpareto_eval) : bug fixed

2007-11-24  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/iterators.c (igraph_es_vector_copy) : added
